--- a/additional.html
+++ b/additional.html
@@ -2,56 +2,71 @@
 <html>
 
 <head>
-  <title>Additional</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" type="text/css" />
   <!--Bootstrap Library-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <!--jquery Library-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <!--JavaScript Library-->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-fixed-top">
+   <nav class="navbar navbar-expand-sm">
     <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Logo</a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav navbar-right text-center">
-          <li><a href="#home">HOME</a></li>
-          <li><a href="#band">ABOUT</a></li>
+      <a class="navbar-brand" href="landing-page.html">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="landing-page.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="additional.html">Link</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
   <div>
     <h1> ARTICLE</h1>
-      <div class="articles">
-        <a href="#">Article 1</a>
-        <a href="#">Article 2</a>
-        <a href="#">Article 3</a>
-      </div>
+    <div class="articles">
+      <a href="#">Article 1</a>
+      <a href="#">Article 2</a>
+      <a href="#">Article 3</a>
+    </div>
   </div>
   <main>
-    <div class="article 1">ehfkjdsnkj</div>
-    <div class="article 2">jhdgjdj</div>
-    <div class="article 3">hdsgsyuj</div>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          Article 1
+        </div>
+      </div>
+      <img src="..." class="img-thumbnail" alt="...">
+    </div>
 
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          Article 2
+        </div>
+      </div>
+      <img src="..." class="img-thumbnail" alt="...">
+    </div>
 
-
-
-    <!--  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-    <!--<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
-    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          Article 3
+        </div>
+      </div>
+      <img src="..." class="img-thumbnail" alt="...">
+    </div>
   </main>
   <footer>
     ODKFOKKFLGM
