--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gun Violence</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link href="style.css rel="stylesheet">
+    <link href="home.css" rel="stylesheet">
   </head>
   
   <body>
@@ -25,13 +25,13 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a href="#home" class="nav-link">HOME</a>
+              <a href="#home.html" class="nav-link">HOME</a>
             </li>
             <li class="nav-item">
-              <a href="#stories" class="nav-link">STORIES</a>
+              <a href="stories.html" class="nav-link">STORIES</a>
             </li>
             <li class="nav-item">
-              <a href="#action" class="nav-link">CALL TO ACTION</a>
+              <a href="action.html" class="nav-link">CALL TO ACTION</a>
             </li>
           </ul>
         </div>
@@ -46,15 +46,24 @@
             <p class="lead my-4">
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat 
             </p>
+            <div class="buttons">
             <button
               class="btn btn-light btn-lg"
               data-bs-toggle="modal"
               data-bs-target="#donate"
             >
-              DONATE
+          DONATE
             </button>
           </div>
+          <div class="behind-button"></div>
+          </div>
           <img
+          class="img3"
+            class="img-fluid w-50 d-none d-sm-block"
+            src="Gun_Violence-01.svg"
+            alt=""
+          />
+           <img
             class="img-fluid w-50 d-none d-sm-block"
             src="Terrorists.svg"
             alt=""
