--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
   <title>Gallery</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" type="text/css" />
+  <link rel="stylesheet" href="gallery.css" type="text/css" />
   <!--Bootstrap Library-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <!--jquery Library-->
@@ -17,15 +17,15 @@
 <body>
   <nav class="navbar navbar-expand-sm">
     <div class="container-fluid">
-      <a class="navbar-brand" href="landing-page.html">Navbar</a>
+      <a class="navbar-brand" href="landing-page.html"><img class="earth-logo" src="earth-icon.jpg"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="landing-page.html">Home</a>
-          </li>
+          <!--<li class="nav-item">-->
+          <!--  <a class="nav-link" href="landing-page.html">Home</a>-->
+          <!--</li>-->
           <li class="nav-item">
             <a class="nav-link" href="additional.html">Link</a>
           </li>
