--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark" >
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <i class="fa-solid fa-dove dove"></i>
                 <a class="navbar-brand" href="#"="true">Comprehensive Sex Education</a>
@@ -22,12 +22,14 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Why Sex Ed?</a>
+                            <a class="nav-link active" aria-current="page"  href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Safe Practices</a>
+                            <a class="nav-link" href="../statistics/statistics.html">Why Sex Ed?</a>
                         </li>
-                
+                        <li class="nav-item">
+                            <a class="nav-link" href="../learn-more/learn-more.html">Safe Practices</a>
+                        </li>
                     </ul>
                 </div>
             </div>
