--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -2,18 +2,39 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="index.css" type="text/css" />
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="statistics.css" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/21b584a66f.js" crossorigin="anonymous"></script>
     <title>A=SMR_Project</title>
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
 <body>
     <main>
         <header>
-            <nav>
-                <a href="About">About</a>
-                |<a href="Why">Why</a>|
-                <a href="How">Get involved</a> |
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <div class="container-fluid">
+                    <i class="fa-solid fa-dove dove"></i>
+                    <a class="navbar-brand" href="#"="true">Comprehensive Sex Education</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="../landing-page/index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Why Sex Ed?</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../learn-more/learn-more.html">Safe Practices</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </header>
 
         <section id="Sex-Ed video">
@@ -27,7 +48,7 @@
                     <div id="health rights">
                         <h1>Reproductive Health Rights</h1>
                         <p></p>
-                       
+
                     </div>
                     <div id="safe-sex">
                         <h1>Safe sex</h1>
@@ -37,7 +58,7 @@
                     <div id="Misinformation">
                         <h1> Sex Misinformation </h1>
                         <p></p>
-                       
+
 
                     </div>
 
